--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+
 	<title>Vin'Scène</title>
 </head>
 <body>
@@ -59,9 +60,14 @@
 				<span class="glyphicon glyphicon-search" aria-hidden="true"></span>Recherche</button>
 			</form>
 
-			<table class="table table-bordered col-md-12">
+			<table class="table table-bordered col-md-12 ">
 
 				<thead>
+				<tr>
+					<th><button type="button" onclick="tri(0)">classement</button></th>
+					<th><button type="button"onclick="tri(1)">NOM</button><button type="button" onclick="tri_prenom()">Prenom</button></th>
+					<th><button type="button" onclick="tri(2)">dossard</button></th>
+				</tr>	
 				</thead>
 
 				<tbody id="classmt">
