--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 					<label>dossard</label>
 				<button type="submit" name="recherchek" value="recherche" class="btn btn-default" >
 				<span class="glyphicon glyphicon-search" aria-hidden="true"></span>Recherche</button>
+				<button type="button" onclick="tri_prenom()">Tri prénom</button>
 			</form>
 
 			<table class="table table-bordered col-md-12 sortable">
